--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Savvy-Find,Book & Enjoy!</title>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/index.css">
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
